--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         </div><!-- .alert end -->
     </div><!-- .wrap end -->
 
-    <script src="js/apikey.js"></script>
+    <script src="apikey.js"></script>
     <script src="js/greeting.js"></script>
     <script src="js/backroundImg.js"></script>
     <script src="js/profile.js"></script>
